<resources>
    <string name="app_name">TrendingGithubCleanMvvm</string>
    <string name="menu_trending_github">Trending github</string>
    <string name="menu_bookmarked">Bookmarked</string>
    <string name="menu_sort">Sorting by</string>
    <string name="menu_list_type">Type</string>
    <string name="menu_list_type_today">Today</string>
    <string name="menu_list_type_week">This Week</string>
    <string name="menu_list_type_month">This Month</string>
    <string name="menu_sort_off">turn off</string>
    <string name="menu_sort_stars_total">total stars</string>
    <string name="menu_sort_stars_since">stars since</string>
    <string name="menu_sort_forks">forks count</string>
    <string name="label_repository">Repository:</string>
    <string name="label_user_name">User:</string>
    <string name="label_technology">Technology:</string>
    <string name="label_total_fork">Total fork:</string>
    <string name="label_total_stars">Total stars:</string>
    <string name="stars_since_today">Stars since today</string>
    <string name="stars_since_week">Stars since this week</string>
    <string name="stars_since_month">Stars since this month</string>
    <string name="app_exit_label">Press BACK again to exit</string>
    <string name="menu_settings">Settings</string>
    <string name="trending_github_title">Trending Github Repositories</string>
    <string name="settings_title">Settings</string>
    <string name="list_title_separator">/</string>
    <string name="error_something_went_wrong">Something went wrong..</string>
    <string name="error_offline_test_scenario">Disable data connection to see offline behaviour</string>
    <string name="action_retry">Retry</string>
    <string name="label_built_by">Built by</string>
    <string name="button_open_repository">Open repository</string>
    <string name="repository_item_transition_name">repository_item_%1$s</string>
    <string name="detail_transition_name">detail_transition</string>
</resources>
